# WetStringReverb

./: CLAUDE.md  CMakeLists.txt  setup-copilot.sh
Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AttenuationFilter.cpp  AttenuationFilter.h  CloudsReverb.cpp  CloudsReverb.h  DarkVelvetNoise.cpp  DarkVelvetNoise.h  DelayLine.cpp  DelayLine.h  Diffuser.h  EarlyReflections.cpp  EarlyReflections.h  FDNReverb.cpp  FDNReverb.h  FeedbackMatrix.cpp  FeedbackMatrix.h  OversamplingManager.cpp  OversamplingManager.h  ReverbMixer.cpp  ReverbMixer.h  Saturation.cpp  Saturation.h  SaturationToneFilter.cpp  SaturationToneFilter.h  VelvetNoise.cpp  VelvetNoise.h
Tests/: AudioProcessingTests.cpp  FDNTests.cpp  OversamplingTests.cpp  PluginTests.cpp  SaturationTests.cpp
scripts/: fix-counter.sh
